Finalize homepage layout: fix spacing, alignment, and footer

--- a/_sass/_hypha.scss
+++ b/_sass/_hypha.scss
@@ -197,6 +197,13 @@ h2 {
   // border: 1px solid black;
 }
 
+h3 {
+  @extend .f3;
+  @extend .f2-l;
+  @extend .fw6;
+  @extend .mb3;
+}
+
 // Homepage h3 elements should be purple (accent color)
 .root-and-lines h3 {
   color: $accent-color;
